# v38-watchlist

./: .gitignore  Command Center full.html  build dashboard.py  build_dashboard .py  build_dashboard.py  ci_py311_preflight.py  daily_log.csv  equity.csv  fred_cache.json  index.html  intelligence-dashboard.html  mktcap.json  portfolio.example.csv  privacy-audit-status.json  pyproject.toml  requirements.txt  research-bootstrap-status.json  research-dashboard.html  research-readiness.json  research-run-status.json  sector snapshot.json  sector_snapshot.json  state.json  trend_history.json  universe.csv  v38 auto.py
data/: theme_taxonomy.csv
docs/: EXTERNAL_DATA_PRIORITY.md  PRIVATE_SOURCE_PUBLIC_PAGES.md  research-operations.md  sidecar_failure_guards.md
intelligence_engine/: ARCHITECTURE.md  PRIVATE_SETUP.md  README.md  RESEARCH_ARCHITECTURE.md  __init__.py  command_layer.py  config.py  dashboard_bridge.py  diff.py  display_labels.py  ensure_prices.py  entry.py  expectancy.py  external_data.py  external_fetch.py  forward_validation.py  intelligence_dashboard.py  leader_history.py  leadership.py  market.py  models.py  morning_brief.py  operational_pipeline.py  pipeline.py  portfolio.py  preflight.py  presentation.py  prices.py  providers.py  query.py  release_check.py  research_contracts.py  research_dashboard.py  research_decision_dashboard.py  research_engine.py  research_expectancy.py  research_financials.py  research_labels.py  research_operations.py  research_pipeline.py  (+16 more)
private/: intelligence-state.enc.json  research-error-detail.json  research-success.json  (+22 more)
(+313 files in other folders)
