[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v38-intelligence-engine"
version = "0.1.0"
description = "Sidecar investment intelligence engine for v38-watchlist"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pandas>=2.1"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
